# socket-games

./: .dockerignore  .env.template  .gitattributes  .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: Contract.md  Plans.md  Working_ticket.md
scripts/: entrypoint.sh
socket_games/: app.py  game_blueprint.py  game_message.py  socket_helper.py
socket_games/mafia/: kill_vote_status.py  lynch_vote_status.py  mafia_blueprint.py  mafia_encoder.py  mafia_event.py  mafia_game.py  mafia_player.py  mafia_role.py  mafia_socket_message.py  mafia_stage.py  vote_status.py
socket_games/static/css/: game_shared.css  mafia.css  main.css  tic_tac_toe.css
socket_games/static/js/: mafia.js  main.js  tic_tac_toe.js
socket_games/templates/: game.html  index.html  mafia.html  tic_tac_toe.html
socket_games/tic_tac_toe/: ttt_blueprint.py  ttt_encoder.py  ttt_game_result.py  ttt_game_state.py  ttt_player.py  ttt_square.py
socket_games_tests/: app_test.py  test_helpers.py
socket_games_tests/mafia/: mafia_blueprint_test.py  mafia_game_test.py
socket_games_tests/tic_tac_toe/: ttt_blueprint_test.py  ttt_encoder_state_test.py  ttt_game_state_test.py  ttt_state_helper.py
tic_tac_toe/: app.py  game_state.py  socket_helper.py
tic_tac_toe/static/css/: main.css
tic_tac_toe/static/js/: game.js  main.js
tic_tac_toe/templates/: game.html  index.html
tic_tac_toe_tests/: app_test.py
