[tool.poetry]
name = "socket_games"
version = "0.1.0"
description = "Simple socket-based games"
authors = ["Jack Mead <jack-mead@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
quart = "^0.16.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
black = "^22.1.0"
async-timeout = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
